src/test/should_panic/vec_map_many_duplicates.rs
pub fn main() {
    linear_collections_macros::vec_map![(0, "v"), (0, "v"), (1, "v"), (1, "v")];
}
